--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -60,9 +60,9 @@
   "menuQuitApp": "{} afsluiten",
   "sysMenuAboutKeeWeb": "Over {}",
   "sysMenuServices": "Diensten",
-  "sysMenuHide": "{} verbergen",
-  "sysMenuHideOthers": "Overige verbergen",
-  "sysMenuUnhide": "Alles weergeven",
+  "sysMenuHide": "Verberg {}",
+  "sysMenuHideOthers": "Verberg andere",
+  "sysMenuUnhide": "Toon alles",
   "sysMenuQuit": "{} afsluiten",
   "sysMenuEdit": "Bewerken",
   "sysMenuUndo": "Ongedaan maken",
