--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -14,6 +14,7 @@
   "or": "ou",
   "history": "historique",
   "template": "modèle",
+  "templates": "templates",
   "notImplemented": "Non Implémenté",
   "saveChanges": "Sauvegarder les modifications",
   "discardChanges": "Annuler les modifications",
@@ -46,6 +47,7 @@
   "menuColors": "Couleurs",
   "menuTrash": "Corbeille",
   "menuSetGeneral": "Général",
+  "menuSetBrowser": "Navigateur",
   "menuSetAbout": "À propos",
   "menuSetDevices": "Appareils",
   "menuAlertNoTags": "Aucun tag",
@@ -80,6 +82,8 @@
   "alertCopy": "Copier",
   "alertClose": "Fermer",
   "alertDoNotAsk": "Ne plus me le redemander",
+  "alertAllow": "Autoriser",
+  "alertDeny": "Refuser",
   "appBeta": "ATTENTION: version beta, aperçu seulement",
   "footerOpen": "Ouvrir/Nouveau",
   "footerSyncError": "Erreur de synchronisation",
@@ -139,6 +143,7 @@
   "keyChangeMessageExpired": "La clé maître pour cette base de donnée est expirée. Merci de saisir une nouvelle clé.",
   "keyChangeRepeatPassword": "Mot de passe, encore une fois",
   "keyEnter": "Entrée",
+  "keyEsc": "Esc",
   "iconFavTitle": "Télécharger et utiliser le favicon du site web",
   "iconSelCustom": "Sélectionner une icône personnalisée",
   "listEmptyTitle": "Vide",
@@ -267,6 +272,7 @@
   "detMore": "plus",
   "detClickToAddField": "cliquez pour ajouter un nouveau champ",
   "detMenuAddNewField": "Ajouter nouveau champ",
+  "detMenuAddNewWebsite": "Ajouter un autre site",
   "detMenuShowEmpty": "Montrer les champs vides",
   "detMenuHideEmpty": "Cacher les champs vides",
   "detMenuAddField": "Ajouter {}",
@@ -614,6 +620,21 @@
   "setPlTranslateLink": "traduire l'appli dans votre langue",
   "setPlAutoUpdate": "Mise à jour automatique",
   "setPlLoadGallery": "Charger le catalogue",
+  "setBrowserTitle": "Navigateur",
+  "setBrowserExtensionFor": "pour {}",
+  "setBrowserExtensionNotSupported": "Non supporté",
+  "setBrowserExtensionInstall": "Installer l'application",
+  "setBrowserSessions": "Sessions",
+  "setBrowserSessionsEmpty": "Aucune session connectée",
+  "setBrowserSessionsIntro": "Ces extensions sont connectées à KeeWeb",
+  "setBrowserSessionsActiveTooltip": "Session active",
+  "setBrowserSessionsInactiveTooltip": "session inactive",
+  "setBrowserSessionsDeniedTooltip": "Accès interdit",
+  "setBrowserSessionsConnectedDate": "Connecté",
+  "setBrowserSessionsTerminate": "Clôturer la session",
+  "setBrowserSessionsAccessToFiles": "Autoriser l'accès aux fichiers",
+  "setBrowserSessionsPasswordsRead": "Accès aux mot de passe",
+  "setBrowserSessionsPasswordsWritten": "Mots de passe enregistrés",
   "setDevicesTitle": "Appareils",
   "setDevicesEnableUsb": "Autoriser les interactions avec les appareils USB",
   "setDevicesYubiKeyIntro": "Il est recommandé de lire {} avant d'utiliser une YubiKey.",
@@ -669,6 +690,7 @@
   "dropboxLinkFull": "Tout Dropbox ou n'importe quel dossier",
   "dropboxLinkCustom": "Votre appli Dropbox",
   "gdriveSharedWithMe": "Partagé avec moi",
+  "gdriveSharedDrives": "Lecteurs partagés",
   "webdavSaveMethod": "Méthode de sauvegarde",
   "webdavSaveMove": "Envoyer un fichier temporaire et le déplacer",
   "webdavSavePut": "Écraser le fichier kdbx avec PUT",
@@ -697,5 +719,7 @@
   "yubiKeyDisabledErrorHeader": "L'USB est désactivé",
   "yubiKeyDisabledErrorBody": "Yubikey est nécessaire pour ouvrir ce fichier, merci d'activer les appareils USB dans les paramètres",
   "yubiKeyErrorWithCode": "Erreur Yubikey code {}.",
-  "bioOpenAuthPrompt": "ouvrir \"{}\""
+  "bioOpenAuthPrompt": "ouvrir \"{}\"",
+  "extensionErrorUserRejected": "La requête a été refusée",
+  "extensionErrorNoMatches": "Aucune correspondance"
 }
