--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -47,6 +47,7 @@
   "menuColors": "Колір ",
   "menuTrash": "Смітник",
   "menuSetGeneral": "Загальні",
+  "menuSetBrowser": "Браузер",
   "menuSetAbout": "Про програму",
   "menuSetDevices": "Пристрої",
   "menuAlertNoTags": "Без тегів",
@@ -81,6 +82,8 @@
   "alertCopy": "Копіювати ",
   "alertClose": "Закрити ",
   "alertDoNotAsk": "Більше ніколи не запитувати",
+  "alertAllow": "Дозволити",
+  "alertDeny": "Заборонити",
   "appBeta": "ПОПЕРЕДЖЕННЯ: бета-версія, тільки для ознайомлення ",
   "footerOpen": "Відкрити / Створити ",
   "footerSyncError": "Помилка синхронізації ",
@@ -140,6 +143,7 @@
   "keyChangeMessageExpired": "Термін дії головного пароля цієї бази паролів завершився. Будь ласка, введіть новий пароль",
   "keyChangeRepeatPassword": "Пароль ще раз",
   "keyEnter": "Вхід",
+  "keyEsc": "Esc",
   "iconFavTitle": "Завантажити піктограму вебсайту",
   "iconSelCustom": "Обрати власну піктограму",
   "listEmptyTitle": "Порожньо",
@@ -267,7 +271,8 @@
   "detCopyHint": "Ви можете скопіювати значення поля, клацнувши на його назві",
   "detMore": "більше",
   "detClickToAddField": "натисніть, щоб додати нове поле",
-  "detMenuAddNewField": "Додати нове поле",
+  "detMenuAddNewField": "Нове поле",
+  "detMenuAddNewWebsite": "Додати інший вебсайт",
   "detMenuShowEmpty": "Показати порожні поля",
   "detMenuHideEmpty": "Приховати порожні поля",
   "detMenuAddField": "Додати {}",
@@ -341,6 +346,7 @@
   "autoTypeSelectionHintOpt": "Ввести тільки логін",
   "autoTypeSelectionHintShift": "Інші поля",
   "autoTypeSelectionOtp": "Одноразовий код",
+  "autoTypeUnlockMessage": "Відімкнути для автозаповнення",
   "appSecWarn": "Не безпечно!",
   "appSecWarnBody1": "Ви завантажили цю програму через незахищене з'єднання. Хтось може спостерігати за вами і викрасти ваші паролі. Ми наполегливо рекомендуємо вам зупинитися, якщо тільки ви не впевнені в своїх діях.",
   "appSecWarnBody2": "Так, ваша база даних в зашифрованому вигляді, але ніхто не може гарантувати, що програма не була змінена на шляху до вас.",
@@ -475,7 +481,7 @@
   "setGenAuditPasswordEntropy": "Перевіряти довжину і випадковість пароля",
   "setGenExcludePinsFromAudit": "Ніколи не перевіряти числові PIN-коди, наприклад, 123456",
   "setGenCheckPasswordsOnHIBP": "Перевіряти паролі з використанням мережевого сервісу {}",
-  "setGenHelpHIBP": "KeeWeb може перевіряти за допомогою мережевого сервісу, чи не розкривалися ваші паролі разом з минулими витоками даних. Під час цієї перевірки ваші паролі неможливо виявити чи отримати до них доступ, однак кількість паролів, що перевіряється таким чином, може бути доступна. Ви можете ознайомитися докладніше про цей сервіс та про вашу приватність {}. Увімкнувши цю опцію, KeeWeb автоматично перевірятиме ваші паролі.",
+  "setGenHelpHIBP": "KeeWeb може перевіряти чи не розкривалися ваші паролі разом з минулими витоками даних, використовуючи мережевий сервіс. Під час цієї перевірки ваші паролі неможливо виявити чи отримати до них доступ, однак кількість паролів, що перевіряється таким чином, може бути доступна. Ви можете ознайомитися докладніше про цей сервіс та про вашу приватність {}. Увімкнувши цю опцію, KeeWeb автоматично перевірятиме ваші паролі.",
   "setGenHelpHIBPLink": "тут",
   "setGenAuditPasswordAge": "Застарілі паролі",
   "setGenAuditPasswordAgeOff": "Не показувати застереження про застарілі паролі",
@@ -615,6 +621,11 @@
   "setPlTranslateLink": "Перекласти програму на вашу мову",
   "setPlAutoUpdate": "Оновлювати автоматично",
   "setPlLoadGallery": "Завантажити галерею плагінів",
+  "setBrowserTitle": "Браузер",
+  "setBrowserIntroDesktop": "KeeWeb може автоматично вводити паролі, однак розширення для браузера може бути зручнішим для цього. KeeWeb підтримує два розширення для браузерів:",
+  "setBrowserIntroKeeWebConnect": "офіційне розширення KeeWeb, створене й адаптоване спеціально для KeeWeb, але якщо вам не вистачає деяких розширених можливостей, ви можете спробувати інше розширення.",
+  "setBrowserIntroKeePassXcBrowser": "це розширення було розроблено для KeePassXC. Воно вже зарекомендувало себе протягом певного часу і є досить функціональним. Розширення не належить до продуктів KeeWeb, тому може мати проблеми сумісності.",
+  "setBrowserIntroWeb": "Встановіть наше розширення для браузера, щоб автоматично заповнювати паролі з KeeWeb на різних сторінках. Розширення з'єднуватиметься з вкладкою KeeWeb у браузері для отримання паролів. Натисніть тут, щоб завантажити розширення:",
   "setDevicesTitle": "Пристрої",
   "setDevicesEnableUsb": "Увімкнути взаємодію з USB-пристроями",
   "setDevicesYubiKeyIntro": "Рекомендується ознайомитися з {} перед використанням YubiKey.",
@@ -698,5 +709,6 @@
   "yubiKeyDisabledErrorHeader": "USB вимкнено",
   "yubiKeyDisabledErrorBody": "Для відкриття цього файлу необхідний YubiKey. Увімкніть пристрої USB в налаштуваннях.",
   "yubiKeyErrorWithCode": "Помилка YubiKey, код {}.",
-  "bioOpenAuthPrompt": "відкрити \"{}\""
+  "bioOpenAuthPrompt": "відкрити \"{}\"",
+  "extensionUnlockMessage": "Відімкніть для з'єднання з розширенням браузера"
 }
