--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -446,12 +446,12 @@
   "setGenNoAutoLock": "Не блокувати",
   "setGenLockMinutes": "через {} хвилин",
   "setGenLockHour": "Через годину",
-  "setGenLockHours": "В {} годин",
-  "setGenLockDay": "В день ",
+  "setGenLockHours": "Через {} годин",
+  "setGenLockDay": "Через день",
   "setGenClearClip": "Очистити буфер після копіювання",
   "setGenNoClear": "Не  очищати",
   "setGenClearSeconds": "через {} секунд",
-  "setGenClearMinute": "в хвилину",
+  "setGenClearMinute": "За хвилину",
   "setGenMinInstead": "Згортати програму замість закриття",
   "setGenMinOnFieldCopy": "Згортати при копіюванні поля",
   "setGenLock": "Автоматичне блокування",
@@ -615,8 +615,8 @@
   "setPlInstallUrlDesc": "Якщо плагін відсутній в галереї, ви можете встановити його вручну з URL-адреси",
   "setPlOfficial": "Офіційний плагін KeeWeb",
   "setPlSearch": "Пошук плагінів",
-  "setPlDevelop": "Хочете зробити свої власні плагіни?",
-  "setPlDevelopStart": "Почати тут",
+  "setPlDevelop": "Хочете створити власні плагіни?",
+  "setPlDevelopStart": "Почніть тут",
   "setPlTranslate": "Або ви можете {}",
   "setPlTranslateLink": "Перекласти програму на вашу мову",
   "setPlAutoUpdate": "Оновлювати автоматично",
@@ -626,6 +626,33 @@
   "setBrowserIntroKeeWebConnect": "офіційне розширення KeeWeb, створене й адаптоване спеціально для KeeWeb, але якщо вам не вистачає деяких розширених можливостей, ви можете спробувати інше розширення.",
   "setBrowserIntroKeePassXcBrowser": "це розширення було розроблено для KeePassXC. Воно вже зарекомендувало себе протягом певного часу і є досить функціональним. Розширення не належить до продуктів KeeWeb, тому може мати проблеми сумісності.",
   "setBrowserIntroWeb": "Встановіть наше розширення для браузера, щоб автоматично заповнювати паролі з KeeWeb на різних сторінках. Розширення з'єднуватиметься з вкладкою KeeWeb у браузері для отримання паролів. Натисніть тут, щоб завантажити розширення:",
+  "setBrowserNotEnabled": "Інтеграція з браузером не увімкнена. Розширення не зможе з'єднатися з KeeWeb. Використайте прапорці нижче для увімкнення:",
+  "setBrowserEnablePerBrowser": "Увімкніть інтеграцію з браузером за допомогою прапорців нижче:",
+  "setBrowserFocusIfLocked": "Відкрийте KeeWeb якщо розширення браузера намагається з'єднатися, коли не відкрито файл",
+  "setBrowserFocusIfEmpty": "Показувати екран вибору запису якщо не знайдено збігів за URL-адресою",
+  "setBrowserOtherBrowsers": "Інші браузери",
+  "setBrowserExtensionFor": "для {}",
+  "setBrowserExtensionNotSupported": "Не підтримується",
+  "setBrowserExtensionHelp": "Як встановити?",
+  "setBrowserExtensionInstall": "Встановити розширення",
+  "setBrowserExtensionKPXCWarnHeader": "{} припинить роботу",
+  "setBrowserExtensionKPXCWarnBody1": "На жаль, неможливо з'єднати одне розширення до кількох програм. Якщо ви під'єднаєте розширення до KeeWeb, зв'язок з програмою буде перезаписано, тому інтеграція з {} припиниться. Навіть якщо ви приберете цей прапорець, зв'язок з {} не буде відновлено. Для відновлення роботи налаштуйте інтеграцію з браузером в налаштуваннях {}.",
+  "setBrowserExtensionKPXCWarnBody2": "Налаштувати розширення для роботи з KeeWeb?",
+  "setBrowserSessions": "Сеанси",
+  "setBrowserSessionsEmpty": "Немає під'єднаних сеансів.",
+  "setBrowserSessionsIntro": "Ці розширення тепер під'єднані до KeeWeb.",
+  "setBrowserSessionsActiveTooltip": "Активний сеанс",
+  "setBrowserSessionsActiveText": "Цей сеанс активний. Він може обмінюватися даними з KeeWeb на основі таких дозволів:",
+  "setBrowserSessionsInactiveTooltip": "Неактивний сеанс",
+  "setBrowserSessionsInactiveText": "Цей сеанс неактивний. Розширення під'єднано до KeeWeb, однак воно не намагалося виконувати обмін даними. Коли розширення запитає будь-які дані, ви зможете вибрати, до яких даних бажаєте надати доступ.",
+  "setBrowserSessionsDeniedTooltip": "Доступ заборонено",
+  "setBrowserSessionsDeniedText": "Цей сеанс неактивний. Розширення під'єднане до KeeWeb, однак ви заборонили доступ до даних.",
+  "setBrowserSessionsConnectedDate": "З'єднано",
+  "setBrowserSessionsTerminate": "Видалити цей сеанс",
+  "setBrowserSessionsAccessToFiles": "Дозволити доступ до файлів",
+  "setBrowserSessionsNoFileAccess": "Розширення не має доступу до файлів. Воно не зможе отримувати паролі від KeeWeb.",
+  "setBrowserSessionsPasswordsRead": "Зчитано паролів",
+  "setBrowserSessionsPasswordsWritten": "Збережено паролів",
   "setDevicesTitle": "Пристрої",
   "setDevicesEnableUsb": "Увімкнути взаємодію з USB-пристроями",
   "setDevicesYubiKeyIntro": "Рекомендується ознайомитися з {} перед використанням YubiKey.",
@@ -681,6 +708,8 @@
   "dropboxLinkFull": "Увесь Dropbox чи будь-яка тека",
   "dropboxLinkCustom": "Свій Dropbox-додаток",
   "gdriveSharedWithMe": "Розшарено зі мною",
+  "gdriveSharedDrives": "Спільні диски",
+  "gdriveTeamDrives": "Командні диски",
   "webdavSaveMethod": "Метод збереження",
   "webdavSaveMove": "Завантажити тимчасовий файл і перемістити",
   "webdavSavePut": "Перезаписати файл kdbx за допомогою PUT",
@@ -710,5 +739,38 @@
   "yubiKeyDisabledErrorBody": "Для відкриття цього файлу необхідний YubiKey. Увімкніть пристрої USB в налаштуваннях.",
   "yubiKeyErrorWithCode": "Помилка YubiKey, код {}.",
   "bioOpenAuthPrompt": "відкрити \"{}\"",
-  "extensionUnlockMessage": "Відімкніть для з'єднання з розширенням браузера"
+  "extensionErrorNoOpenFiles": "Немає відкритих файлів",
+  "extensionErrorUserRejected": "Запит було заборонено",
+  "extensionErrorNoMatches": "Немає відповідних записів",
+  "extensionErrorAlertDisplayed": "Неможливо запитати зараз, тому що відкрито інше вікно. Спробуйте знову",
+  "extensionConnectHeader": "Обмін даними з розширенням",
+  "extensionConnectIntro": "Розширення браузера {} намагається обмінятися даними з KeeWeb.",
+  "extensionConnectUnknownActivity": "KeeWeb не перевіряє відповідність під'єднаної програми. Дозволяйте запит лише якщо ви впізнаєте цю активність та довіряєте їй.",
+  "extensionConnectFiles": "Для цього сеансу дозволити доступ до:",
+  "extensionConnectAllOtherFiles": "Усі інші файли",
+  "extensionConnectAllFiles": "Усі файли",
+  "extensionConnectAskGet": "Запитувати перед наданням паролів розширенню:",
+  "extensionConnectAskGetMultiple": "якщо більше одного збігу",
+  "extensionConnectAskGetAlways": "завжди",
+  "extensionConnectAskSave": "Запитувати перед збереженням нових паролів у KeeWeb:",
+  "extensionConnectAskSaveAlways": "завжди",
+  "extensionConnectAskSaveAuto": "коли неможливо зберегти автоматично",
+  "extensionConnectSettingsAreForSession": "Налаштування, які ви тут виберете, дійсні лише для активного сеансу. Ви можете переглянути і керувати сеансами в налаштуваннях KeeWeb.",
+  "extensionUnlockMessage": "Відімкніть для з'єднання з розширенням браузера",
+  "extensionNewGroupHeader": "Нова група",
+  "extensionNewGroupBody": "{} намагається створити нову групу. Дозволити?",
+  "extensionNewGroupPath": "Шлях до групи",
+  "extensionNewGroupFile": "Цю групу буде створено в:",
+  "extensionSaveEntryHeader": "Зберегти пароль",
+  "extensionSaveEntryBody": "{} Намагається зберегти пароль. Дозволити?",
+  "extensionSaveEntryAuto": "Автоматично зберігати паролі в цьому сеансі",
+  "extensionSaveEntryNewGroup": "нова група",
+  "extensionSelectPasswordFor": "Оберіть пароль для {}",
+  "selectEntryHeader": "Оберіть запис",
+  "selectEntryEnterHint": "використати вибраний запис",
+  "selectEntryTypingHint": "Почніть вводити для фільтрування",
+  "selectEntryContains": "Містить текст",
+  "selectEntrySubdomains": "Піддомени",
+  "selectEntryFieldHeader": "Оберіть поле",
+  "selectEntryFieldTouch": "Натисніть кнопку на вашому пристрої, щоб згенерувати одноразовий код."
 }
