--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -47,6 +47,7 @@
   "menuColors": "颜色",
   "menuTrash": "回收站",
   "menuSetGeneral": "通用",
+  "menuSetBrowser": "浏览器集成",
   "menuSetAbout": "关于",
   "menuSetDevices": "设备",
   "menuAlertNoTags": "无标签",
@@ -81,6 +82,8 @@
   "alertCopy": "复制",
   "alertClose": "关闭",
   "alertDoNotAsk": "不再询问",
+  "alertAllow": "允许",
+  "alertDeny": "拒绝",
   "appBeta": "警告：测试版本，仅供预览",
   "footerOpen": "打开 / 新建",
   "footerSyncError": "同步出错",
@@ -140,6 +143,7 @@
   "keyChangeMessageExpired": "该数据库的主密钥已过期，请输入新密钥",
   "keyChangeRepeatPassword": "密码，再输入一遍",
   "keyEnter": "输入",
+  "keyEsc": "退出",
   "iconFavTitle": "下载并使用站点图标",
   "iconSelCustom": "选择自定义图标",
   "listEmptyTitle": "空",
@@ -268,6 +272,7 @@
   "detMore": "更多",
   "detClickToAddField": "点击添加一个新的字段",
   "detMenuAddNewField": "添加新字段",
+  "detMenuAddNewWebsite": "添加另一个网址",
   "detMenuShowEmpty": "显示空字段",
   "detMenuHideEmpty": "隐藏空字段",
   "detMenuAddField": "添加 {}",
@@ -341,6 +346,7 @@
   "autoTypeSelectionHintOpt": "仅输入用户名",
   "autoTypeSelectionHintShift": "其它字段",
   "autoTypeSelectionOtp": "一次性代码",
+  "autoTypeUnlockMessage": "解锁以自动键入",
   "appSecWarn": "不安全！",
   "appSecWarnBody1": "您已经通过不安全的连接加载当前应用。其他人可能监控并盗窃您的密码。我们强烈建议您停止使用，除非您清楚地了解自己在做什么。",
   "appSecWarnBody2": "是的，你的数据库是加密的，但无法保证保证您所获取的应用未被修改。",
@@ -615,6 +621,38 @@
   "setPlTranslateLink": "将此应用翻译为您的语言",
   "setPlAutoUpdate": "自动更新",
   "setPlLoadGallery": "加载插件库",
+  "setBrowserTitle": "浏览器集成",
+  "setBrowserIntroDesktop": "KeeWeb可以使用自动键入输入密码，但是浏览器扩展可能是一种更方便的方式。KeeWeb支持两种浏览器扩展：",
+  "setBrowserIntroKeeWebConnect": "官方的KeeWeb扩展，它的构建考虑了KeeWeb的特性，但是您可能会错过一些可以在其他扩展中找到的高级功能。",
+  "setBrowserIntroKeePassXcBrowser": "这个扩展是为KeePassXC开发的，它在市场上已经有一段时间了，而且非常可靠。该扩展不属于KeeWeb，可能存在兼容性问题。",
+  "setBrowserIntroWeb": "安装我们的浏览器扩展，在不同的页面上自动填写KeeWeb的密码。浏览器扩展将连接到浏览器中的KeeWeb选项卡以获取密码。单击此处下载扩展：",
+  "setBrowserNotEnabled": "未启用浏览器集成，扩展将无法连接到Web。使用下面的复选框启用它：",
+  "setBrowserEnablePerBrowser": "使用以下复选框以启用浏览器集成：",
+  "setBrowserFocusIfLocked": "如果浏览器扩展尝试连接时无打开的文件，则打开KeeWeb",
+  "setBrowserFocusIfEmpty": "如果URL未找到匹配项，则显示条目选择页面",
+  "setBrowserOtherBrowsers": "其他浏览器",
+  "setBrowserExtensionFor": "为了{}",
+  "setBrowserExtensionNotSupported": "不支持",
+  "setBrowserExtensionHelp": "如何安装？",
+  "setBrowserExtensionInstall": "安装扩展",
+  "setBrowserExtensionKPXCWarnHeader": "{} 将会停止工作",
+  "setBrowserExtensionKPXCWarnBody1": "不幸的是，无法将一个扩展连接到多个应用程序。如果将扩展连接到KeeWeb，我们将覆盖其应用程序关联，这意味着与{}的集成将停止工作。即使取消选中此复选框，也不会恢复与{}的关联。要使其再次工作，请在{}设置中配置浏览器集成。",
+  "setBrowserExtensionKPXCWarnBody2": "配置扩展程序以使用KeeWeb？",
+  "setBrowserSessions": "会话",
+  "setBrowserSessionsEmpty": "没有连接的会话。",
+  "setBrowserSessionsIntro": "这些扩展现在已连接到KeeWeb。",
+  "setBrowserSessionsActiveTooltip": "活动会话",
+  "setBrowserSessionsActiveText": "此会话处于活动状态。它可以基于以下权限与KeeWeb交换数据：",
+  "setBrowserSessionsInactiveTooltip": "非活动会话",
+  "setBrowserSessionsInactiveText": "此会话处于非活动状态。扩展连接到KeeWeb，但是它没有尝试交换数据。当扩展请求任何内容时，您可以选择要共享的内容。",
+  "setBrowserSessionsDeniedTooltip": "访问被拒绝",
+  "setBrowserSessionsDeniedText": "此会话处于非活动状态。扩展已连接到KeeWeb，但您拒绝访问数据。",
+  "setBrowserSessionsConnectedDate": "已连接",
+  "setBrowserSessionsTerminate": "终止此会话",
+  "setBrowserSessionsAccessToFiles": "允许访问文件",
+  "setBrowserSessionsNoFileAccess": "扩展没有访问任何文件的权限，它将无法从KeeWeb获取密码。",
+  "setBrowserSessionsPasswordsRead": "已读取的密码",
+  "setBrowserSessionsPasswordsWritten": "已保存的密码",
   "setDevicesTitle": "设备",
   "setDevicesEnableUsb": "启用与USB设备交互",
   "setDevicesYubiKeyIntro": "建议在使用YubiKey之前先阅读 {} 。",
@@ -670,6 +708,8 @@
   "dropboxLinkFull": "整个 Dropbox 或者任意文件夹",
   "dropboxLinkCustom": "自有 Dropbox 应用",
   "gdriveSharedWithMe": "与我分享",
+  "gdriveSharedDrives": "共享驱动",
+  "gdriveTeamDrives": "团队驱动",
   "webdavSaveMethod": "保存方式",
   "webdavSaveMove": "上传一个临时文件并移动",
   "webdavSavePut": "以 PUT 方式覆盖文件",
@@ -698,5 +738,39 @@
   "yubiKeyDisabledErrorHeader": "usb不可用",
   "yubiKeyDisabledErrorBody": "需要YubiKey才能打开此文件，请在设置中启用USB设备。",
   "yubiKeyErrorWithCode": "YubiKey错误，代码{}。",
-  "bioOpenAuthPrompt": "打开 \"{}\""
+  "bioOpenAuthPrompt": "打开 \"{}\"",
+  "extensionErrorNoOpenFiles": "无打开的文件",
+  "extensionErrorUserRejected": "请求被拒绝",
+  "extensionErrorNoMatches": "无匹配的登录项",
+  "extensionErrorAlertDisplayed": "现在无法提问，因为显示了另一个对话框，请重试",
+  "extensionConnectHeader": "扩展数据交换",
+  "extensionConnectIntro": "将自身标识为{}的浏览器扩展尝试与Web交换数据。",
+  "extensionConnectUnknownActivity": "KeeWeb不会验证连接的应用程序是否是它假装的。仅当您识别此活动时才批准请求。",
+  "extensionConnectFiles": "在此会话中，允许访问：",
+  "extensionConnectAllOtherFiles": "所有其他的文件",
+  "extensionConnectAllFiles": "所有文件",
+  "extensionConnectAskGet": "在返回密码到扩展前询问:",
+  "extensionConnectAskGetMultiple": "如果有多项匹配",
+  "extensionConnectAskGetAlways": "总是",
+  "extensionConnectAskSave": "在保存新密码到KeeWeb前询问：",
+  "extensionConnectAskSaveAlways": "总是",
+  "extensionConnectAskSaveAuto": "当无法自动保存时",
+  "extensionConnectSettingsAreForSession": "您在此处选择的设置仅对活动会话有效。您可以在KeeWeb设置中查看和管理会话。",
+  "extensionUnlockMessage": "解锁以连接浏览器扩展",
+  "extensionNewGroupHeader": "新组",
+  "extensionNewGroupBody": "{}正在尝试创建一个新组，是否允许？",
+  "extensionNewGroupPath": "组路径",
+  "extensionNewGroupFile": "该组将被创建到：",
+  "extensionSaveEntryHeader": "保存密码",
+  "extensionSaveEntryBody": "{}正在尝试保存密码，是否允许？",
+  "extensionSaveEntryAuto": "在此会话中自动保存其他密码",
+  "extensionSaveEntryNewGroup": "新组",
+  "extensionSelectPasswordFor": "为{}选择密码",
+  "selectEntryHeader": "选择条目",
+  "selectEntryEnterHint": "使用高亮的条目",
+  "selectEntryTypingHint": "开始键入以筛选",
+  "selectEntryContains": "包含文本",
+  "selectEntrySubdomains": "子域名",
+  "selectEntryFieldHeader": "选择字段",
+  "selectEntryFieldTouch": "按下您的设备上的按钮以生成一次性代码。"
 }
