--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -80,6 +80,8 @@
   "alertCopy": "Copia",
   "alertClose": "Chiudi",
   "alertDoNotAsk": "Non chiedermelo più",
+  "alertAllow": "Autorizza",
+  "alertDeny": "Nega",
   "appBeta": "ATTENZIONE: versione beta, solo per anteprima",
   "footerOpen": "Apri / Nuovo",
   "footerSyncError": "Errore sincronizzazione",
@@ -139,6 +141,7 @@
   "keyChangeMessageExpired": "La chiave principale per questo database è scaduta. Per favore inserire una nuova chiave",
   "keyChangeRepeatPassword": "Password, di nuovo",
   "keyEnter": "Invia",
+  "keyEsc": "Esc",
   "iconFavTitle": "Scarica ed usa la favicon dal sito",
   "iconSelCustom": "Seleziona un'icona personalizzata",
   "listEmptyTitle": "Vuoto",
@@ -209,6 +212,7 @@
   "openConfigErrorNotFound": "File non trovato",
   "openError": "errore",
   "openErrorDescription": "C'è stato un errore nell'apertura del file",
+  "openErrorDescriptionMaybeTouchIdChanged": "L'errore si presenta se la configurazione Touch Id è cambiata, quando ad esempio, sono state aggiunte o rimosse impronte. In questo caso, andare nelle Impostazioni, disattivare Touch ID e riattivarlo.",
   "openErrorFileNotFound": "File non trovato",
   "openListErrorBody": "Errore durante il caricamento della lista dei file",
   "openShowAllFiles": "Mostra tutti i file",
@@ -266,6 +270,7 @@
   "detMore": "di più",
   "detClickToAddField": "clicca per aggiungere un nuovo campo",
   "detMenuAddNewField": "aggiungi nuovo campo",
+  "detMenuAddNewWebsite": "Aggiungi un altro sito web",
   "detMenuShowEmpty": "mostra campi vuoti",
   "detMenuHideEmpty": "nascondi campi vuoti",
   "detMenuAddField": "Aggiungi {}",
@@ -314,6 +319,8 @@
   "detIssuesHideTooltip": "Nascondi questo warning",
   "detIssueWeakPassword": "La password é debole, si raccomanda di cambiarla.",
   "detIssuePoorPassword": "La password é molto debole, si raccomanda fortemente di cambiarla.",
+  "detIssuePwnedPassword": "Questa password è stata coinvolta in una violazione di dati personali secondo {}, è consigliato cambiarla.",
+  "detIssuePasswordCheckError": "Si è verificato un errore eseguendo il controllo online sulla robustezza della password.",
   "detIssueOldPassword": "La password è vecchia.",
   "detIssueCloseAlertHeader": "Nascondi i problemi della password",
   "detIssueCloseAlertBody": "Ci sono diversi modi per nascondere questo warning:",
@@ -325,6 +332,7 @@
   "autoTypeLink": "altro...",
   "autoTypeError": "Errore scrittura automatica",
   "autoTypeErrorGeneric": "C'è stato un errore durante la scrittura automatica: {}",
+  "autoTypeErrorAccessibilityMacOS": "Abbiamo provato ad inviare la pressione di un tasto all'applicazione, ma non sembra funzionare. Solitamente succede per mancanza di permessi, clicca qui per saperne di più.",
   "autoTypeErrorGlobal": "Per utilizzare le scorciatoie di sistema, seleziona l'app dove vuoi che venga inserita la password",
   "autoTypeErrorNotInstalled": "{} non è installato",
   "autoTypeHeader": "Auto-Type: Seleziona",
